# Mini_Game_1

./: .gitignore  build.gradle.kts  settings.gradle.kts
engine/: build.gradle.kts
engine/src/main/java/: Attribute.java  ComponentScheduler.java  EntityManagement.java  Player.java  System.java  Tada.java
engine/src/main/java/world/: scene.java
game/: build.gradle.kts
game/src/main/java/world/: Chunk.java
gradle/wrapper/: gradle-wrapper.properties
renderer/: build.gradle.kts
renderer/rendering/: Cargo.toml  block_color.json  block_key.json
renderer/rendering/src/: block_types.rs  camera.rs  chunk_renderer.rs  jni_interface.rs  lib.rs  texture.rs
renderer/rendering/src/model/: player.glb  rocket.glb
renderer/rendering/src/render_backend/: glb_loader.rs  instance.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  scene.rs  state.rs
renderer/rendering/src/shaders/: shader.wgsl
renderer/src/main/java/: Teste.java
src/main/java/: GameState.java  Main.java  PlayerMoveSystem.java
src/main/resources/: key_block.json  tada.json
