[package]
name = "rendering"
version = "0.1.0"
edition = "2024"

[dependencies]
jni = "0.21.1"
winit = "*"
env_logger = "*"
anyhow = "1.0.100"
pollster = "0.4.0"
wgpu = "*"
log = "0.4.28"
bytemuck = "*"
cgmath = "0.18.0"
instant = "*"
gltf = "*"
serde = "*"
serde_json = "*"

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg"]

[lib]
crate-type = ["cdylib"]